--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -57,3 +57,25 @@
     margin-bottom: 10px !important;
     background-size: 100% 100%;
 }
+
+
+.wp-button {
+	margin-top:14px;
+    color: #FFF;
+    font-size: 35px;
+}
+
+.float {
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+    font-size:35px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
