--- a/public/assets/css/cards/35-card_front.css
+++ b/public/assets/css/cards/35-card_front.css
@@ -27,9 +27,9 @@
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: 103px;
-  left: 0px;
-  width: 140px;
-  height: 230px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
