--- a/public/assets/css/cards/50-card_front.css
+++ b/public/assets/css/cards/50-card_front.css
@@ -39,13 +39,14 @@
   position: absolute;
   color: red;
   z-index: 3;
-  top: 135px;
-  left: -56px;
+  top: 131px;
+  left: -38px;
   text-align: left;
   font-size: 7px;
   font-family: Arial;
-  width: 210px;
-  height: 50px;
+  width: 190px;
+  height: 30px;
+  line-height: 0.9;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
 }
@@ -95,14 +96,31 @@
   -ms-transform: rotate(90deg);
 }
 
+.element__tag7 {
+  position: absolute;
+  color: #10145d;
+  z-index: 3;
+  top: 350px;
+  left: 23px;
+  text-align: left;
+  font-size: 12px;
+  font-family: Arial;
+  width: 190px;
+  height: 50px;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  font-weight: bolder;
+}
+
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: 240px;
-  left: 11px;
-  width: 80px;
-  height: 110px;
+  top: 236px;
+  left: 23px;
+  width: 70px;
+  height: 100px;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
+  border-radius: 5px;
+  border: black 1px solid;
 }
-
