--- a/public/assets/css/cards/69-card_front.css
+++ b/public/assets/css/cards/69-card_front.css
@@ -7,12 +7,12 @@
 
 .element__tag1 {
   position: absolute;
-  color: #000;
+  color: #fff;
   z-index: 3;
-  top: 218px;
+  top: 50px;
   left: 0px;
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
   font-family: Arial;
   font-weight: bold;
   width: 100%;
@@ -21,29 +21,25 @@
 
 .element__tag2 {
   position: absolute;
-  color: #000;
+  color: #fff;
   z-index: 3;
-  top: 258px;
+  top: 70px;
   left: 0px;
   text-align: center;
-  font-size: 12px;
+  font-size: 13px;
   font-family: Arial;
   font-weight: bold;
   width: 100%;
   height: 20px;
 }
 
-.element__tag3 {
-  display: none;
-}
-
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: 88px;
-  left: 63px;
-  width: 86px;
-  height: 115px;
+  top: 100px;
+  left: 55px;
+  width: 100px;
+  height: 130px;
   border-radius: 0px;
 /*   transform: rotate(90deg);
   -ms-transform: rotate(90deg); */
