--- a/public/assets/css/cards/63-card_back.css
+++ b/public/assets/css/cards/63-card_back.css
@@ -2,13 +2,13 @@
     display: block;
     position: absolute;
     z-index: 3;
-    top: 57px;
+    top: 55px;
     left: 13px;
     width: 250px;
     height: 20px;
-    font-size: 10px;
+    font-size: 12px;
     color: #000;
-    font-family: Arial;
+    font-family: sans-serif;
     font-weight: bold;
     text-align: left;
     /* transform: rotate(90deg);
@@ -25,23 +25,24 @@
     height: 20px;
     font-size: 10px;
     color: #000;
-    font-family: Arial;
-    font-weight: bold;
+    font-family: sans-serif;
     text-align: left;
 }
 .element__back3 {
     display: block;
     position: absolute;
     z-index: 3;
-    top: 151px;
-    left: 13PX;
-    width: 250px;
+    top: 149px;
+    left: 13px;
+    width: 120px;
     height: 20px;
-    font-size: 10px;
+    font-size: 12x;
     color: #000;
-    font-family: Arial;
+    font-family: sans-serif;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
+    
+    
 }
 
 .element__back4 {
@@ -54,8 +55,7 @@
     height: 20px;
     font-size: 10px;
     color: #000;
-    font-family: Arial;
-    font-weight: bold;
+    font-family: sans-serif;
     text-align: left;
 }
 
@@ -63,13 +63,30 @@
     display: block;
     position: absolute;
     z-index: 3;
-    top: 151px;
-    left: 155px;
-    width: 250px;
+    top: 142px;
+    left: 153px;
+    width: 50px;
     height: 20px;
-    font-size: 10px;
-    color: #000;
-    font-family: Arial;
+    font-size: 20px;
+    color: red;
+    font-family: sans-serif;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
 }
+
+.element__back6 {
+    display: block;
+    position: absolute;
+    z-index: 3;
+    top: 293px;
+    left: 3px;
+    width: 100%;
+    height: 60px;
+    font-size: 8px;
+    color: rgba(47, 32, 20, 1);
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    white-space: pre;
+    line-height: 1.2;
+} 
