--- a/public/assets/css/cards/92-card_front.css
+++ b/public/assets/css/cards/92-card_front.css
@@ -1,75 +1,79 @@
 @font-face {
-  font-family: FontFace;
-  src: url('../../fonts/gotham-book.otf');
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-.element__tag1 {
-  position: absolute;
-  color: #57585a;
-  z-index: 3;
-  top: 250px;
-  left: 0px;
+  font-family:FontFace;
+  src:url(../../fonts/gotham-book.otf)
+ }
+ @import 'https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap';
+ .element__tag1 {
+  position:absolute;
+  color:#57585a;
+  z-index:3;
+  top:235px;
+  left:50px;
+  text-align: left;
+  font-size:13px;
+  font-family:Arial;
+  font-weight:400;
+  width:150px;
+  height:20px;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+ }
+ .element__tag2 {
+  position:absolute;
+  color:#57585a;
+  z-index:3;
+  top:225px;
+  left:30px;
+  text-align: left;
+  font-size:13px;
+  font-family:Arial;
+  font-weight:bold;
+  width:150px;
+  height:40px;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+ }
+ .element__tag3 {
+   position:absolute;
+  color:#57585a;
+  z-index:3;
+  top:235px;
+  left:12px;
+  text-align: left;
+  font-size:11px;
+  font-family:Arial;
+  font-weight:400;
+  width:150px;
+  height:20px;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+ }
+ .element__tag4 {
+  position:absolute;
+  color:#fff;
+  z-index:3;
+  top:212px;
+  left:-22px;
   text-align: center;
-  font-size: 11px;
-  font-family: Arial;
-  font-weight: normal;
-  width: 100%;
-  height: 20px; 
-}
-
-.element__tag2 {
-  position: absolute;
-  color: #57585a;
-  z-index: 3;
-  top: 250px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
-  font-family: Arial;
-  font-weight: normal;
-  width: 100%;
-  height: 20px; 
-}
-
-.element__tag3 {
-  position: absolute;
-  color: #57585a;
-  z-index: 3;
-  top: 250px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
-  font-family: Arial;
-  font-weight: normal;
-  width: 100%;
-  height: 20px; 
-}
-
-.element__tag4 {
-  position: absolute;
-  color: #fff;
-  z-index: 3;
-  top: 250px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
-  font-family: Arial;
-  font-weight: normal;
-  width: 100%;
-  height: 20px; 
-}
-
-.element-avatar {
-  position: absolute;
-  z-index: 2;
-  top: 90px;
-  left: 45px;
-  width: 120px;
-  height: 155px;
-  border-radius: 0px;
-  /* transform: rotate(90deg);
- -ms-transform: rotate(90deg);   */
-}
-
+  font-size:13px;
+  font-family:Arial;
+  font-weight:bold;
+  width:150px;
+  height:20px;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+ }
+ .element-avatar {
+  position:absolute;
+  z-index:2;
+  top:34px;
+  left:60px;
+  width:95px;
+  height:125px;
+  border-radius:0;
+   border: #bad6db 2px solid;
+  transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+ }
+ 
+ 
