--- a/public/assets/css/cards/95-card_front.css
+++ b/public/assets/css/cards/95-card_front.css
@@ -9,12 +9,12 @@
   position: absolute;
   color: #fff;
   z-index: 3;
-  top: 253px;
+  top: 223px;
   left: 0px;
   text-align: center;
-  font-size: 11px;
+  font-size: 12px;
   font-family: Arial;
-  font-weight: normal;
+  font-weight: bold;
   width: 100%;
   height: 20px; 
 }
@@ -23,12 +23,12 @@
   position: absolute;
   color: #fff;
   z-index: 3;
-  top: 282px;
+  top: 242px;
   left: 0px;
   text-align: center;
-  font-size: 11px;
+  font-size: 12px;
   font-family: Arial;
-  font-weight: normal;
+  font-weight: bold;
   width: 100%;
   height: 20px; 
 }
@@ -37,23 +37,23 @@
   position: absolute;
   color: #fff;
   z-index: 3;
-  top: 282px;
-  left: 0px;
+  top: 264px;
+  left: 15px;
   text-align: center;
   font-size: 11px;
   font-family: Arial;
-  font-weight: normal;
-  width: 100%;
+  font-weight: bold;
+  width: 200px;
   height: 20px; 
 }
 
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: 120px;
-  left: 65px;
-  width: 90px;
-  height: 113px;
+  top: 117px;
+  left: 70px;
+  width: 75px;
+  height: 95px;
   border-radius: 0px;
   /* transform: rotate(90deg);
  -ms-transform: rotate(90deg);    */
