--- a/public/assets/css/cards/95-card_front.css
+++ b/public/assets/css/cards/95-card_front.css
@@ -12,8 +12,8 @@
   top: 223px;
   left: 0px;
   text-align: center;
-  font-size: 12px;
-  font-family: Arial;
+  font-size: 10px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   width: 100%;
   height: 20px; 
@@ -26,8 +26,8 @@
   top: 242px;
   left: 0px;
   text-align: center;
-  font-size: 12px;
-  font-family: Arial;
+  font-size: 11px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   width: 100%;
   height: 20px; 
@@ -37,15 +37,30 @@
   position: absolute;
   color: #fff;
   z-index: 3;
-  top: 264px;
-  left: 15px;
-  text-align: center;
-  font-size: 11px;
-  font-family: Arial;
+  top: 266px;
+  left: 78px;
+  text-align: left;
+  font-size: 10px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   width: 200px;
   height: 20px; 
 }
+
+.element__tag4 {
+  position: absolute;
+  color: #fff;
+  z-index: 3;
+  top: 297px;
+  left: 132px;
+  text-align: left;
+  font-size: 9px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  width: 50px;
+  height: 20px; 
+}
+
 
 .element-avatar {
   position: absolute;
