--- a/public/assets/css/cards/97-card_front.css
+++ b/public/assets/css/cards/97-card_front.css
@@ -9,10 +9,10 @@
   position: absolute;
   color: #000;
   z-index: 3;
-  top: 253px;
-  left: 0px;
+  top: 190px;
+  left: 3px;
   text-align: left;
-  font-size: 11px;
+  font-size: 10px;
   font-family: Arial;
   font-weight: normal;
   width: 200px;
@@ -23,70 +23,76 @@
 
 .element__tag2 {
   position: absolute;
-  color: #fff;
+  color: #000;
   z-index: 3;
-  top: 282px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
+  top: 190px;
+  left: -39px;
+  text-align: left;
+  font-size: 10px;
   font-family: Arial;
   font-weight: normal;
-  width: 100%;
+  width: 200px;
   height: 20px; 
+    transform: rotate(90deg);
+  -ms-transform: rotate(90deg); 
 }
 
 .element__tag3 {
   position: absolute;
-  color: #fff;
+  color: #000;
   z-index: 3;
-  top: 282px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
+  top: 190px;
+  left: -80px;
+  text-align: left;
+  font-size: 10px;
   font-family: Arial;
   font-weight: normal;
-  width: 100%;
+  width: 200px;
   height: 20px; 
+    transform: rotate(90deg);
+  -ms-transform: rotate(90deg); 
 }
 
 .element__tag4 {
   position: absolute;
-  color: #fff;
+  color: #000;
   z-index: 3;
-  top: 282px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
+  top: 305px;
+  left: -39px;
+  text-align: left;
+  font-size: 10px;
   font-family: Arial;
   font-weight: normal;
-  width: 100%;
+  width: 200px;
   height: 20px; 
+    transform: rotate(90deg);
+  -ms-transform: rotate(90deg); 
 }
 
 .element__tag5 {
   position: absolute;
-  color: #fff;
+  color: #000;
   z-index: 3;
-  top: 282px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
+  top: 305px;
+  left: -80px;
+  text-align: left;
+  font-size: 10px;
   font-family: Arial;
   font-weight: normal;
-  width: 100%;
+  width: 200px;
   height: 20px; 
-  
+    transform: rotate(90deg);
+  -ms-transform: rotate(90deg); 
 }
 
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: 120px;
-  left: 65px;
-  width: 90px;
-  height: 113px;
+  top: -6px;
+  left: 29px;
+  width: 82px;
+  height: 105px;
   border-radius: 0px;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);   
 }
-
