--- a/public/assets/css/cards/95-card_front.css
+++ b/public/assets/css/cards/95-card_front.css
@@ -52,12 +52,12 @@
   color: #fff;
   z-index: 3;
   top: 297px;
-  left: 132px;
-  text-align: left;
+  left: 0px;
+  text-align: center;
   font-size: 9px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  width: 50px;
+  width: 100%;
   height: 20px; 
 }
 
@@ -71,6 +71,6 @@
   height: 95px;
   border-radius: 0px;
   /* transform: rotate(90deg);
- -ms-transform: rotate(90deg);    */
+ -ms-transform: rotate(90deg); */
 }
 
