--- a/public/assets/css/cards/98-card_front.css
+++ b/public/assets/css/cards/98-card_front.css
@@ -7,31 +7,31 @@
 
 .element__tag1 {
   position: absolute;
-  color: #000;
+  color: #fff;
   z-index: 3;
-  top: 253px;
+  top: 263px;
   left: 0px;
-  text-align: left;
-  font-size: 11px;
+  text-align: center;
+  font-size: 16px;
   font-family: Arial;
   font-weight: normal;
-  width: 200px;
+  width: 100%;
   height: 20px; 
-    transform: rotate(90deg);
-  -ms-transform: rotate(90deg);   
+    /* transform: rotate(90deg);
+  -ms-transform: rotate(90deg);    */
 }
 
 .element__tag2 {
   position: absolute;
   color: #fff;
   z-index: 3;
-  top: 282px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
+  top: 283px;
+  left: 74px;
+  text-align:left;
+  font-size: 16px;
   font-family: Arial;
   font-weight: normal;
-  width: 100%;
+  width: 200px;
   height: 20px; 
 }
 
@@ -52,12 +52,12 @@
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: 120px;
+  top: 140px;
   left: 65px;
   width: 90px;
   height: 113px;
-  border-radius: 0px;
+/*   border-radius: 0px;
   transform: rotate(90deg);
-  -ms-transform: rotate(90deg);   
+  -ms-transform: rotate(90deg);    */
 }
 
