--- a/public/assets/css/cards/98-card_front.css
+++ b/public/assets/css/cards/98-card_front.css
@@ -26,6 +26,22 @@
   color: #fff;
   z-index: 3;
   top: 283px;
+  left: 0px;
+  text-align: center;
+  font-size: 16px;
+  font-family: Arial;
+  font-weight: normal;
+  width: 100%;
+  height: 20px; 
+    /* transform: rotate(90deg);
+  -ms-transform: rotate(90deg);    */
+}
+
+.element__tag3 {
+  position: absolute;
+  color: #fff;
+  z-index: 3;
+  top: 304px;
   left: 74px;
   text-align:left;
   font-size: 16px;
@@ -35,27 +51,13 @@
   height: 20px; 
 }
 
-.element__tag3 {
-  position: absolute;
-  color: #fff;
-  z-index: 3;
-  top: 282px;
-  left: 0px;
-  text-align: center;
-  font-size: 11px;
-  font-family: Arial;
-  font-weight: normal;
-  width: 100%;
-  height: 20px; 
-}
-
 .element-avatar {
   position: absolute;
   z-index: 2;
   top: 140px;
-  left: 65px;
+  left: 62px;
   width: 90px;
-  height: 113px;
+  height: 120px;
 /*   border-radius: 0px;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);    */
