--- a/public/assets/css/cards/108-card_front.css
+++ b/public/assets/css/cards/108-card_front.css
@@ -7,12 +7,12 @@
 
 .element__tag1 {
   position: absolute;
-  color: #000;
+  color: #fff;
   z-index: 3;
-  top: 220px;
-  left: 11px;
-  text-align: left;
-  font-size: 12px;
+  top: 280px;
+  left: 0px;
+  text-align: center;
+  font-size: 15px;
   font-family: Arial;
   width: 100%;
   height: 20px;
@@ -22,12 +22,12 @@
 
 .element__tag2 {
   position: absolute;
-  color: #000;
+  color: #fff;
   z-index: 3;
-  top: 220px;
-  left: -8px;
-  text-align: left;
-  font-size: 12px;
+  top: 300px;
+  left: 0px;
+  text-align: center;
+  font-size: 15px;
   font-family: Arial;
   width: 100%;
   height: 20px;
@@ -36,10 +36,10 @@
 .element-avatar {
   position: absolute;
   z-index: 2;
-  top: -3px;
-  left: 33px;
-  width: 80px;
-  height: 101px;
+  top: 125px;
+  left: 45px;
+  width: 120px;
+  height: 150px;
   border-radius: 0px;
   /* transform: rotate(90deg);
   -ms-transform: rotate(90deg); */
