--- a/public/assets/css/cards/125-card_front.css
+++ b/public/assets/css/cards/125-card_front.css
@@ -7,12 +7,12 @@
 
 .element__tag1 {
     position: absolute;
-    color: #fff;
+    color: #000;
     z-index: 3;
-    top: 280px;
+    top: 239px;
     left: 0;
     text-align: CENTER;
-    font-size: 16px;
+    font-size: 12px;
     font-family: Arial;
     font-weight: bold;
     width: 100%;
@@ -23,14 +23,13 @@
 
 .element__tag2 {
     position: absolute;
-    color: #fff;
+    color: #000;
     z-index: 3;
-    top: 300px;
+    top: 280px;
     left: 0;
     text-align: CENTER;
-    font-size: 13px;
+    font-size: 12px;
     font-family: Arial;
-    font-weight: bold;
     width: 100%;
     height: 20px;
     /* transform: rotate(90deg);
@@ -40,12 +39,11 @@
 .element-avatar {
     position: absolute;
     z-index: 2;
-    top: 145px;
-    left: 68px;
-    width: 87px;
-    height: 113px;
+    top: 95px;
+    left: 55px;
+    width: 100px;
+    height: 120px;
     border-radius: 0px;
-    border: gray 1px solid;
     /* transform: rotate(90deg);
   -ms-transform: rotate(90deg); */
 }
