--- a/public/assets/css/cards/127-card_front.css
+++ b/public/assets/css/cards/127-card_front.css
@@ -7,30 +7,46 @@
 
 .element__tag1 {
     position: absolute;
-    color: #fff;
+    color: #000;
     z-index: 3;
-    top: 280px;
-    left: 0;
+    top: 270px;
+    left: 0px;
     text-align: CENTER;
-    font-size: 16px;
+    font-size: 14px;
     font-family: Arial;
-    font-weight: bold;
     width: 100%;
     height: 20px;
+    font-weight: bold;
     /* transform: rotate(90deg);
   -ms-transform: rotate(90deg); */
 }
 
 .element__tag2 {
     position: absolute;
-    color: #fff;
+    color: #000;
     z-index: 3;
-    top: 300px;
-    left: 0;
+    top: 290px;
+    left: 0px;
     text-align: CENTER;
     font-size: 13px;
     font-family: Arial;
+    width: 100%;
+    height: 20px;
+    height: 20px;
     font-weight: bold;
+    /* transform: rotate(90deg);
+  -ms-transform: rotate(90deg); */
+}
+
+.element__tag3 {
+    position: absolute;
+    color: #ffdd47;
+    z-index: 3;
+    top: 310px;
+    left: 0px;
+    text-align: CENTER;
+    font-size: 12px;
+    font-family: Arial;
     width: 100%;
     height: 20px;
     /* transform: rotate(90deg);
@@ -40,12 +56,11 @@
 .element-avatar {
     position: absolute;
     z-index: 2;
-    top: 145px;
-    left: 68px;
-    width: 87px;
-    height: 113px;
+    top: 97px;
+    left: 49px;
+    width: 116px;
+    height: 154px;
     border-radius: 0px;
-    border: gray 1px solid;
     /* transform: rotate(90deg);
   -ms-transform: rotate(90deg); */
 }
